Fix product details thumb stretching

--- a/src/styles/ProductDetails.module.css
+++ b/src/styles/ProductDetails.module.css
@@ -13,7 +13,9 @@
 }
 
 .product-details-container>img{
-    max-width: 100%;
+    width: 100%;
+    height: auto;
+    place-self: center;
 }
 
 .details{
